--- a/audio.html
+++ b/audio.html
@@ -39,81 +39,24 @@
         </div>
     </div>
     <div class="h-[8vh]"></div>
-    <div class="study-nav w-[92%] h-[18vh] top-0 z-10 sticky ml-[60px] bg-white flex rounded-t-2xl justify-between p-5 items-center">
+    <div class="study-nav w-[92%] h-[17vh] top-0 z-10 sticky ml-[60px] bg-white flex rounded-t-2xl justify-between p-5 items-center">
         <div class="source pl-10">
             <img src="./svg/File_duotone_line.svg" alt="">
             Source
         </div>
         <div class="study-sessions w-[70%] h-full flex justify-evenly items-center">
-            <div class="text h-full w-[18%] flex flex-col justify-between items-center border-solid rounded-3xl p-2 bg-[#FFE7D8] border-[#F8844D] border-[2px]">
+            <div class="text h-full w-[18%] flex flex-col justify-between items-center border-solid rounded-3xl p-2 active:bg-[#FFE7D8] active:border-[#F8844D] active:border-[2px]">
                 <a href="./reading.html"><img class="w-14 h-12" src="./svg/Chat_alt_2_duotone_line.svg" alt=""></a>
                 Immersive Text
             </div>
             <div class="slide h-full w-[18%] flex flex-col justify-between items-center border-solid rounded-3xl p-2 active:bg-[#E0A9FF] active:border-[#CD29F6] active:border-[2px]">
-                <a href="./slide.html"><img class="w-10 h-15" src="./svg/Youtube-Logo.svg" alt=""></a>
+                <a href="./slide.html"><img class="w-10 h-18" src="./svg/Youtube-Logo.svg" alt=""></a>
                 Slide & Narration
             </div>
-            <div class="audio h-full w-[18%] flex flex-col justify-center items-center border-solid rounded-3xl p-2 active:bg-[#b1fcaa] active:border-[#47FF37]  active:border-[2px]">
-                <a href="./audio.html"><img class="w-18 h-18" src="./svg/waveform.svg" alt=""></a>
+            <div class="audio h-full w-[18%] flex flex-col justify-center items-center border-solid rounded-3xl p-2 bg-[#b1fcaa] border-[#47FF37] border-[2px]">
+                <a href="./audio.html"><img class="w-18 h-15" src="./svg/waveform.svg" alt=""></a>
                 Audio
             </div>
-        </div>
-    </div>
-
-    <div class="main w-[92%] h-full bg-white m-auto my-8 p-8 border-solid rounded-b-2xl grid grid-cols-12 gap-4">
-        <div class="sidebar top-0 sticky col-span-3 flex flex-col gap-2">
-            <div class="box1 p-3 rounded-2xl bg-[#F7F1EA]">
-                <input class="w-4 h-4" type="checkbox"> 
-                <label class="pl-2 text-sm" for="">Introduction to Economic Systems and Their Organization</label>
-                <div class="quiz w-[65%] text-sm flex border-2 border-solid border-gray-600 p-2 mt-2 ml-5 rounded-2xl gap-1">
-                    <img class="w-5 h-5" src="./svg/Book_check.svg" alt="">
-                    Take quiz to complete
-                </div>
-            </div>
-            <div class="box2 p-3">
-                <input class="w-4 h-4"type="checkbox"> 
-                <label class="pl-2 text-sm" for="">Command, Market, and Mixed Economies
-            </div>
-            <div class="box3 p-3">
-                <input class="w-4 h-4"type="checkbox"> 
-                <label class="pl-2 text-sm" for="">Regulations: The Rules of the Game
-            </div>
-            <div class="box4 p-3">
-                <input class="w-4 h-4"type="checkbox"> 
-                <label class="pl-2 text-sm" for="">The Increase of Globalization
-            </div>
-            <div class="box5 p-3">
-                <input class="w-4 h-4"type="checkbox"> 
-                <label class="pl-2 text-sm" for="">Impact and Pushback Against GLobalization
-            </div>
-        </div>
-
-        <div class="context relative col-span-8 p-7 pt-0">
-            <h1 class="font-semibold text-2xl pb-3">Introduction to Economic Systems and Their Organization</h1>
-            <p>After reading this section, you will be able to:</p>
-            <ul class="flex flex-col gap-2 list-disc p-5 pl-10">
-                <li>Compare traditional, command, and market economies</li>
-                <li>Explain what Gross Domestic Product (GDP) means</li>
-                <li>Understand how important globalization is and what effects it has</li>
-            </ul>
-            <p class="pb-4">Think about how complicated a modern economy is. It includes everything that is made and every service provided, all buying and selling, and all jobs. 
-                The economic life of every person is connected, even if just a little, to the economic lives of thousands or even millions of other people. Who organizes
-                 and manages this huge system? Who makes sure that, for example, a society produces the right number of televisions that people need and want? Who makes 
-                 sure that the correct number of workers are in the electronics industry? Who makes sure that televisions are made in the best way possible? How does all
-                  of this happen?
-            </p>
-            <p class="py-5">There are at least three ways that societies organize their economy. Traditional EconomyThe first is the traditional economy, which is the oldest system
-                 and is still used in parts of Asia, Africa, and South America. Traditional economies run their economic activities the same way they always have 
-                 (following tradition). Jobs are passed down within families. Most families are farmers who grow crops using old methods. What you make is what you use
-                  yourself. Because tradition guides life, there isn't much economic progress or new development.
-
-            </p>
-            <img src="./img/pyramid.jpg" alt="">
-            <p class="pt-5">Command economies are very different. Command EconomyIn a command economy, economic work is focused on goals set by a ruler or a group in charge. 
-                Ancient Egypt is a good example: a large part of the economy was spent on building pyramids, like those in Figure 1.8, for the pharaohs. A youth soccer 
-                academy is another example: the club provides coaching, facilities, and a path to a professional career. In return, the young players commit their time 
-                and effort to train and play as the club directs. In the last century, communism often used command economies.
-            </p>
         </div>
     </div>
 </body>
