--- a/UnlockHomepage/homepage Unlock.html
+++ b/UnlockHomepage/homepage Unlock.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class=" relative ">
-    <img class=" object-cover absolute w-full h-[650px] sm:h-[700px] md:h-[500px] lg:h-[500px] " src="../image/IMG_8459.JPG"
-        alt="background">
+    <img class=" object-cover absolute w-full h-[650px] sm:h-[700px] md:h-[500px] lg:h-[500px] "
+        src="../image/IMG_8459.JPG" alt="background">
 
     <div class=" relative w-full ">
         <div class=" flex justify-between p-2 items-center">
@@ -33,23 +33,73 @@
                 </div>
             </div>
             <div class="icons flex justify-center items-center gap-5 pr-3 ">
-                <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6 " xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                    fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                    <path
-                        d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
-                </svg>
-                <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6" xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                    fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                    <path
-                        d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
-                </svg>
-                <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6" xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                    fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                    <path fill-rule="evenodd"
-                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-                </svg>
+                <a href="">
+                    <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6 "
+                        xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                        class="bi bi-envelope" viewBox="0 0 16 16">
+                        <path
+                            d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+                    </svg>
+                </a>
+                <a href="">
+                    <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6"
+                        xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                        class="bi bi-info-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                        <path
+                            d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
+                    </svg>
+                </a>
+
+                <!-- Hidden checkbox -->
+                <input type="checkbox" id="logout-toggle" class="peer hidden">
+
+                <!-- Open modal button -->
+                <label for="logout-toggle" class=" rounded-lg font-semibold cursor-pointer">
+                    <svg class="hover:cursor-pointer pointer-events-none w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6"
+                        xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                        class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                        <path fill-rule="evenodd"
+                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                    </svg>
+                </label>
+
+                <!-- Overlay -->
+                <!-- inset 0 (top/right/bottom/left = 0) bg-black/opacity -->
+                <!-- Create (popUp) pointer-events-none peer-checked:opacity-100 peer-checked:pointer-events-auto -->
+                <div class="fixed inset-0 bg-black/70 flex items-center justify-center
+                    opacity-0 pointer-events-none
+                    peer-checked:opacity-100 peer-checked:pointer-events-auto
+                    transition">
+
+                    <!-- Modal -->
+                    <div class="bg-orange-400 rounded-2xl p-6 w-[90%] max-w-sm text-white">
+
+                        <h2 class="text-xl font-bold mb-2">Confirm Logout</h2>
+                        <p class="text-gray-100 mb-6">
+                            Are you sure you want to log out?
+                        </p>
+
+                        <div class="flex justify-end gap-3 text-white">
+
+                            <!-- Cancel -->
+                            <label for="logout-toggle"
+                                class="px-4 py-2 rounded-lg bg-gray-600 hover:bg-gray-500 cursor-pointer">
+                                Cancel
+                            </label>
+
+                            <!-- Logout -->
+                            <a href="../Homepage/homepage.html"
+                                class="px-4 py-2 rounded-lg bg-red-600 hover:bg-red-700 font-semibold">
+                                Logout
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+
+                
             </div>
         </div>
 
@@ -182,6 +232,10 @@
     <div class=" absolute bottom-2 right-3 opacity-80 text-xs">
         <a href="https://policies.google.com/terms" target="_blank">Privacy &Terms</a>
     </div>
+
+
+
+
 </body>
 
 </html>
