--- a/reading.html
+++ b/reading.html
@@ -41,8 +41,11 @@
     <div class="lg:h-[4vh]"></div>
     <div class="study-nav w-[92%] h-[8vh] mb-5 md: mt-3 lg:h-[18vh] md:h-[10vh] top-0 z-10 sticky lg:ml-[60px] md:ml-[30px] ml-[16px] bg-white flex rounded-t-2xl justify-between lg:p-5 items-center">
         <div class="source pl-10">
-            <img class="md:w-10 md:h-5 w-8 h-8 lg:h-[50px] lg:w-30 lg:ml-2" src="./svg/File_duotone_line.svg" alt="">
-            <div class="text-[15px]  lg:text-xl md:text-sm">Source</div>
+            <a href="./source.html">
+                <img class="md:w-10 md:h-5 w-8 h-8 lg:h-[50px] lg:w-30 lg:ml-2" src="./svg/File_duotone_line.svg" alt="">
+                <div class="text-[15px]  lg:text-xl md:text-sm">Source</div>
+            </a>
+            
         </div>
         <div class="study-sessions w-[70%] h-full flex justify-evenly items-center">
             <div class="text lg:h-full h-[7vh] w-[20%] lg:w-[18%] md:w-[15%] md:h-[9vh] flex flex-col justify-between items-center border-solid rounded-3xl p-1 lg:p-2 md:p-1 bg-[#FFE7D8] lg:border-[#F8844D] md:border-[#F8844D] border-[2px]">
