--- a/source.html
+++ b/source.html
@@ -47,7 +47,7 @@
             </a>
         </div>
         <div class="study-sessions w-[70%] h-full flex justify-evenly items-center">
-            <div class="text lg:h-full h-[7vh] w-[20%] lg:w-[18%] md:w-[15%] md:h-[9vh] flex flex-col justify-between items-center border-solid rounded-3xl p-1 lg:p-2 md:p-1 bg-[#FFE7D8] lg:border-[#F8844D] md:border-[#F8844D] border-[2px]">
+            <div class="text lg:h-full h-[7vh] w-[20%] lg:w-[18%] md:w-[15%] md:h-[9vh] flex flex-col justify-between items-center border-solid rounded-3xl p-1 lg:p-2 md:p-1 active:bg-[#FFE7D8] active::border-[#F8844D] active:border-[#F8844D] active:border-[2px]">
                 <a href="./reading.html"><img class="lg:w-14 lg:h-12 md:w-10 md:h-8 w-10 h-10" src="./svg/Chat_alt_2_duotone_line.svg" alt=""></a>
                 <div class="md:hidden hidden lg:block">Immersive Text</div>
                 <div class="md:block hidden md:tex-sm lg:hidden">Text</div>
