--- a/Monkry D.Lundy/card.html
+++ b/Monkry D.Lundy/card.html
@@ -11,12 +11,14 @@
 
 <!-- Header Section   -->
     <header>
+        <a href="notebook.html">
         <div class="logo-section">
             <div class="robot-icon">
                 <i class="fa-solid fa-robot"></i>
             </div>
             <h1>Khmer Sign Language Recognition System</h1>
         </div>
+        </a>
         <div class="header-actions">
             <button class="btn btn-light"><i class="fa-solid fa-plus"></i> Create new</button>
             <button class="btn btn-orange"><i class="fa-solid fa-cog"></i> Settings</button>
