--- a/UnlockHomepage/homepage Unlock.html
+++ b/UnlockHomepage/homepage Unlock.html
@@ -26,10 +26,10 @@
             </div>
             <div class=" flex gap-7 font-semibold text-[12px] sm:text-[14px] md:text-[16px] lg:text-[18px] ">
                 <div class=" hover:scale-105 hover:text-orange-500 hover:underline transition-all text-black">
-                    <a href="">Explore</a>
+                    <a href="homepage Unlock.html">Explore</a>
                 </div>
                 <div class=" hover:scale-105 hover:text-orange-500 hover:underline transition-all text-black">
-                    <a href="">My Space</a>
+                    <a href="../Monkry D.Lundy/notebook.html">My Space</a>
                 </div>
             </div>
             <div class="icons flex justify-center items-center gap-5 pr-3 ">
@@ -147,7 +147,7 @@
 
 
         <!-- Card 1 -->
-        <a href="earth.html">
+        <a href="../reading.html">
             <div class=" hover:scale-105 border border-orange-300 rounded-[45px] shadow-sm hover:shadow-md transition">
                 <div>
                     <p class="text-orange-500 text-lg font-semibold p-3 pt-4 flex items-center gap-1">🪐 Astronomy</p>
@@ -159,7 +159,7 @@
 
 
         <!-- Card 2 -->
-        <a href="comet.html">
+        <a href="../reading.html">
             <div class=" hover:scale-105 border border-orange-300 rounded-[45px] shadow-sm hover:shadow-md transition">
                 <div>
                     <p class="text-orange-500 text-lg font-semibold p-4 flex items-center gap-1">🪐 Astronomy</p>
@@ -171,7 +171,7 @@
 
 
         <!-- Card 3 -->
-        <a href="">
+        <a href="../reading.html">
             <div
                 class="hover:scale-105 border border-purple-300 rounded-[45px] shadow-sm hover:shadow-md transition-all">
                 <div>
@@ -186,7 +186,7 @@
 
 
         <!-- Card 4 -->
-        <a href="">
+        <a href="../reading.html">
             <div class="hover:scale-105 border border-blue-300 rounded-[45px] shadow-sm hover:shadow-md transition-all">
                 <div>
                     <p class="text-blue-500 text-lg font-semibold p-4 flex items-center gap-1">⚗️ Chemistry</p>
@@ -198,7 +198,7 @@
 
 
         <!-- Card 5 -->
-        <a href="">
+        <a href="../reading.html">
             <div class="hover:scale-105 border border-blue-300 rounded-[45px] shadow-sm hover:shadow-md transition-all">
                 <div>
                     <p class="text-blue-500 text-lg font-semibold p-4 flex items-center gap-1">⚗️ Chemistry</p>
