--- a/Homepage/signUp.html
+++ b/Homepage/signUp.html
@@ -86,8 +86,8 @@
                 <!-- SIGN UP button -->
                 <div class="form-element ">
                     <button 
-                        class=" w-full border-2 rounded-md p-2  bg-orange-400 hover:bg-orange-500" type="submit">
-                        <a onclick="signup()" href="../UnlockHomepage/homepage Unlock.html">Sign Up</a>
+                        class=" w-full border-2 rounded-md p-2  bg-orange-400 hover:bg-orange-500" type="button" onclick="signup()">
+                        Sign Up
                     </button>
                 </div>
 
