--- a/Monkry D.Lundy/chat.html
+++ b/Monkry D.Lundy/chat.html
@@ -15,7 +15,7 @@
         <div class="chat-header">
             <div class="avatar">NG</div>
             <div class="chat-info">
-                <h2>Nigger</h2>
+                <h2>User</h2>
                 <p>Active now</p>
             </div>
         </div>
