--- a/UnlockHomepage/astronomy Unlock.html
+++ b/UnlockHomepage/astronomy Unlock.html
@@ -25,10 +25,10 @@
             </div>
             <div class=" flex gap-7 font-semibold text-[12px] sm:text-[14px] md:text-[16px] lg:text-[18px] ">
                 <div class=" hover:scale-105 hover:text-orange-500 hover:underline transition-all text-black">
-                    <a href="">Explore</a>
+                    <a href="homepage Unlock.html">Explore</a>
                 </div>
                 <div class=" hover:scale-105 hover:text-orange-500 hover:underline transition-all text-black">
-                    <a href="">My Space</a>
+                    <a href="../Monkry D.Lundy/notebook.html">My Space</a>
                 </div>
             </div>
             <div class="icons flex justify-center items-center gap-5 pr-3 ">
@@ -49,15 +49,53 @@
                             d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
                     </svg>
                 </a>
-                <a href="">
-                    <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6"
+                <!-- Hidden checkbox -->
+                <input type="checkbox" id="logout-toggle" class="peer hidden">
+
+                <!-- Open modal button -->
+                <label for="logout-toggle" class=" rounded-lg font-semibold cursor-pointer">
+                    <svg class="hover:cursor-pointer pointer-events-none w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6"
                         xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                         class="bi bi-person-circle" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
                         <path fill-rule="evenodd"
                             d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
                     </svg>
-                </a>
+                </label>
+
+                <!-- Overlay -->
+                <!-- inset 0 (top/right/bottom/left = 0) bg-black/opacity -->
+                <!-- Create (popUp) pointer-events-none peer-checked:opacity-100 peer-checked:pointer-events-auto -->
+                <div class="fixed inset-0 bg-black/70 flex items-center justify-center
+                    opacity-0 pointer-events-none
+                    peer-checked:opacity-100 peer-checked:pointer-events-auto
+                    transition">
+
+                    <!-- Modal -->
+                    <div class="bg-orange-400 rounded-2xl p-6 w-[90%] max-w-sm text-white">
+
+                        <h2 class="text-xl font-bold mb-2">Confirm Logout</h2>
+                        <p class="text-gray-100 mb-6">
+                            Are you sure you want to log out?
+                        </p>
+
+                        <div class="flex justify-end gap-3 text-white">
+
+                            <!-- Cancel -->
+                            <label for="logout-toggle"
+                                class="px-4 py-2 rounded-lg bg-gray-600 hover:bg-gray-500 cursor-pointer">
+                                Cancel
+                            </label>
+
+                            <!-- Logout -->
+                            <a href="../Homepage/homepage.html"
+                                class="px-4 py-2 rounded-lg bg-red-600 hover:bg-red-700 font-semibold">
+                                Logout
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -106,7 +144,7 @@
 
 
         <!-- Card astro.earth -->
-        <a href="earth.html">
+        <a href="../reading.html">
             <div class=" hover:scale-105 border border-orange-300 rounded-[45px] shadow-sm hover:shadow-md transition">
                 <div>
                     <p class="text-orange-500 text-lg font-semibold p-3 flex items-center gap-1">🪐 Astronomy</p>
@@ -119,7 +157,7 @@
 
 
         <!-- Card astro,comet -->
-        <a href="comet.html">
+        <a href="../reading.html">
             <div class=" hover:scale-105 border border-orange-300 rounded-[45px] shadow-sm hover:shadow-md transition">
                 <div>
                     <p class="text-orange-500 text-lg font-semibold p-4 flex items-center gap-1">🪐 Astronomy</p>
