--- a/quiz/lab.html
+++ b/quiz/lab.html
@@ -109,7 +109,7 @@
                     class="px-4 py-2 rounded-lg bg-gray-600 hover:bg-gray-500 cursor-pointer text-white">
                     Cancel
                 </label>
-                <a href="../Homepage/homepage.html"
+                <a href="../UnlockHomepage/homepage Unlock.html"
                     class="px-4 py-2 rounded-lg bg-orange-600 hover:bg-orange-700 font-semibold text-white">
                     Ok
                 </a>
