Final touch, really really really

--- a/My Space/notebook.html
+++ b/My Space/notebook.html
@@ -14,7 +14,9 @@
       <!-- Header -->
       <header class="header">
         <div class="logo-area">
-          <span class="logo-text">SEA-L</span>
+          <span class="logo-text ">
+            <a href="../UnlockHomepage/homepage Unlock.html">SEA-L</a>
+          </span>
         </div>
         <nav class="navigation">
           <button class="nav-button active">All</button>
@@ -30,6 +32,8 @@
       <main class="main-content">
          <a href="card.html">
         <h2>My notebooks</h2>
+
+        <!-- Notebook grid -->
         <div class="notebook-grid">
           <div class="notebook-card orange">
             <div class="card-header">
