--- a/UnlockHomepage/chemistry Unlock.html
+++ b/UnlockHomepage/chemistry Unlock.html
@@ -29,7 +29,7 @@
                     <a href="homepage Unlock.html">Explore</a>
                 </div>
                 <div class=" hover:scale-105 hover:text-orange-500 hover:underline transition-all text-black">
-                    <a href="../Monkry D.Lundy/notebook.html">My Space</a>
+                    <a href="../My Space/notebook.html">My Space</a>
                 </div>
             </div>
             <div class="icons flex justify-center items-center gap-5 pr-3 ">
@@ -129,13 +129,13 @@
         <!-- Category Filters -->
         <section class=" mt-24 text-xs sm:text-xs md:text-sm lg:text-lg py-10 flex justify-center gap-4 flex-wrap">
             <a href="./homepage Unlock.html"
-                class="hover:scale-105 transition-all hover:shadow-md px-5 py-2 rounded-full bg-orange-500 text-white font-semibold">All</a>
+                class="hover:scale-105 transition-all hover:shadow-md px-5 py-2 rounded-full bg-gray-200 text-gray-700 ">All</a>
             <a href="./astronomy Unlock.html"
-                class="hover:scale-105 transition-all hover:shadow-md px-5 py-2 rounded-full bg-gray-200 text-gray-700">Astronomy</a>
+                class="hover:scale-105 transition-all hover:shadow-md px-5 py-2 rounded-full  bg-gray-200 text-gray-700">Astronomy</a>
             <a href="./biology Unlock.html"
                 class="hover:scale-105 transition-all hover:shadow-md px-5 py-2 rounded-full bg-gray-200 text-gray-700">Biology</a>
             <a href="./chemistry Unlock.html"
-                class="hover:scale-105 transition-all hover:shadow-md px-5 py-2 rounded-full bg-gray-200 text-gray-700">Chemistry</a>
+                class="hover:scale-105 transition-all hover:shadow-md px-5 py-2 rounded-full bg-orange-500 text-white font-semibold">Chemistry</a>
         </section>
     </div>
 
