--- a/reading.html
+++ b/reading.html
@@ -27,7 +27,7 @@
                 <a class="no-underline" href="./UnlockHomepage/homepage Unlock.html">Explore</a>
             </div>
             <div class="myspace lg:text-xl hover:text-orange-500 hover:font-semibold hover:cursor-pointer">
-                <a class="no-underline" href="./Monkry D.Lundy/notebook.html">MySpace</a>
+                <a class="no-underline" href="./My Space/notebook.html">MySpace</a>
             </div>
         </div>
         <div class="icons flex justify-center items-center gap-2 lg:gap-5 lg:pr-3 md:pr-2 md:gap-3">
