--- a/UnlockHomepage/homepage Unlock.html
+++ b/UnlockHomepage/homepage Unlock.html
@@ -29,11 +29,11 @@
                     <a href="homepage Unlock.html">Explore</a>
                 </div>
                 <div class=" hover:scale-105 hover:text-orange-500 hover:underline transition-all text-black">
-                    <a href="../Monkry D.Lundy/notebook.html">My Space</a>
+                    <a href="../My Space/notebook.html">My Space</a>
                 </div>
             </div>
             <div class="icons flex justify-center items-center gap-5 pr-3 ">
-                <a href="">
+                <a href="../My Space/chat.html">
                     <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6 "
                         xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                         class="bi bi-envelope" viewBox="0 0 16 16">
@@ -41,7 +41,7 @@
                             d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
                     </svg>
                 </a>
-                <a href="">
+                <a href="../info.html">
                     <svg class="hover:cursor-pointer w-5 h-4 md:w-6 md:h-5 lg:w-7 lg:h-6"
                         xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                         class="bi bi-info-circle" viewBox="0 0 16 16">
