--- a/quiz/qcm.html
+++ b/quiz/qcm.html
@@ -10,8 +10,8 @@
 </head>
 <body class="w-full h-full bg-[#F7F1EA]">
     <!-- Header -->
-    <div class="h-[8vh] w-full flex justify-between items-center px-4 md:px-6">
-        <div class="left-top flex items-center">
+     <div class="h-[8vh] w-full flex justify-between items-center px-4 md:px-6">
+        <a class="left-top flex items-center" href="../UnlockHomepage/homepage Unlock.html">
             <svg class="w-10 h-10 md:w-12 md:h-12 lg:w-14 lg:h-14" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="100" height="100"/>
                 <defs>
@@ -22,10 +22,10 @@
             </svg>
             <img src="../svg/Main_logo.svg">
             <div class="logo-name font-bold text-lg md:text-xl lg:text-2xl ml-2">SEA-L</div>
-        </div>
+        </a>
         <div class="center-top hidden md:flex flex-grow gap-6 lg:gap-10 items-center justify-center">    
-            <div class="explore text-lg lg:text-xl hover:text-orange-500 hover:cursor-pointer hover:font-semibold">Explore</div>
-            <div class="space text-lg lg:text-xl hover:text-orange-500 hover:cursor-pointer hover:font-semibold">MySpace</div>
+            <a class="explore text-lg lg:text-xl hover:text-orange-500 hover:cursor-pointer hover:font-semibold" href="../UnlockHomepage/homepage Unlock.html">Explore</a>
+            <a class="space text-lg lg:text-xl hover:text-orange-500 hover:cursor-pointer hover:font-semibold" href="../My Space/notebook.html">MySpace</a>
         </div>
         <div class="right-top flex justify-center items-center gap-3 md:gap-5 pr-1 md:pr-3">
             <svg class="hover:cursor-pointer w-5 h-5 md:w-6 md:h-6 lg:w-7 lg:h-7" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
@@ -47,7 +47,7 @@
         <div class="left-nav col-span-4 md:col-span-3 lg:col-span-2 flex items-center justify-center hover:cursor-pointer">
             <div class="quiz-btn flex flex-col items-center justify-center">
                 <img class="w-10 h-10 md:w-12 md:h-12 lg:w-14 lg:h-14" src="../svg/quiz-icons.svg" alt="Quiz">
-                <p class="font-bold text-sm md:text-base lg:text-xl">Quiz</p>
+                <a class="font-bold text-sm md:text-base lg:text-xl" href="qcm.html">Quiz</a>
             </div>
         </div>
         <div class="type-quiz col-span-8 md:col-span-9 lg:col-start-5 lg:col-end-12 grid grid-cols-3 pb-2 lg:pb-3 h-full gap-2 lg:gap-3">
@@ -112,10 +112,10 @@
                     class="px-4 py-2 rounded-lg bg-gray-600 hover:bg-gray-500 cursor-pointer text-white">
                     Cancel
                 </label>
-                <a href="../UnlockHomepage/homepage Unlock.html"
-                    class="px-4 py-2 rounded-lg bg-orange-600 hover:bg-orange-700 font-semibold text-white">
-                    Ok
-                </a>
+                <button onclick="QuizStatus.clearAllStorage(); window.location.href='../UnlockHomepage/homepage Unlock.html'"
+    class="px-4 py-2 rounded-lg bg-orange-600 hover:bg-orange-700 font-semibold text-white">
+    Ok
+</button>
             </div>
         </div>
     </div>
