Final fix on web linking

--- a/info.html
+++ b/info.html
@@ -258,7 +258,7 @@
                     <button onclick="window.print()" class="print-button px-5 py-3 border-2 border-gray-300 rounded-xl text-gray-700 hover:bg-white hover:border-gray-400 transition-all font-medium flex items-center">
                         Print
                     </button>
-                    <a href="../Homepage/homepage.html" class="accept-button px-5 py-3 gradient-bg hover:bg-gradient-to-r hover:from-orange-600 hover:to-orange-500 text-white rounded-xl font-medium transition-all flex items-center">
+                    <a href="UnlockHomepage/homepage Unlock.html" class="accept-button px-5 py-3 gradient-bg hover:bg-gradient-to-r hover:from-orange-600 hover:to-orange-500 text-white rounded-xl font-medium transition-all flex items-center">
                         I Accept
                     </a>
                 </div>
